grafana-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service-new
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-service-new
  namespace: default
subsets:
- addresses:
  - ip: 10.0.171.178
  ports:
  - port: 3000
    protocol: TCP
