grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.statuspage-benami.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service-new
            port:
              number: 80
            # Note: Service is in monitoring namespace, but ingress is in default
            # This may require cross-namespace service reference or service in default namespace
  tls:
  - hosts:
    - grafana.statuspage-benami.com
    secretName: status-page-tls
